--- a/gsoft-framework-core/.gitignore
+++ b/gsoft-framework-core/.gitignore
@@ -1,25 +1,24 @@
+# Eclipse
+.metadata/
+*.settings/
+*.tmp
+*.project
+*.classpath
+
+## Locally stored "Eclipse launch configurations"
+*.launch
+
+# Java
+## Compiled class file
+*.class
+
+## Log file
+*.log
+*.log.*
+/gsoftFileTmp/
+
+## Package files
+*.jar
+
+# Maven
 /target/
-!.mvn/wrapper/maven-wrapper.jar
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/build/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
