--- a/gsoft-framework-context/pom.xml
+++ b/gsoft-framework-context/pom.xml
@@ -27,12 +27,23 @@
          <dependency> 
             <groupId>com.gsoft.framework</groupId>
             <artifactId>gsoft-framework-core</artifactId>
-            <version>0.0.1-SNAPSHOT</version> 
+              <version>${project.version}</version>
              <scope>compile</scope>
          </dependency>
 
-        <!-- servlet -->
+        <!-- spring-web -->
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+        
+         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
+        
+        <!-- servelt -->
+         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
               <version>3.1.0</version>
@@ -46,6 +57,11 @@
             <scope>provided</scope>
         </dependency>
         
+        <dependency>
+	       <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-tomcat</artifactId>
+	       <scope>provided</scope>
+		</dependency>
         
     </dependencies>
  
