核心jar修改成功

--- a/gsoft-framework-contextweb/pom.xml
+++ b/gsoft-framework-contextweb/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>com.gsoft.framework</groupId>
             <artifactId>gsoft-framework-context</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
 
