--- a/pom.xml
+++ b/pom.xml
@@ -82,134 +82,42 @@
     </dependencies>
   
   
-      <dependencyManagement>
-        <dependencies>
-
-            <!-- Spring Data Cassandra -->
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-cql</artifactId>
-                <version>1.5.6.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-cassandra</artifactId>
-                <version>1.5.6.RELEASE</version>
-            </dependency>
-
-            <!-- Spring Data Commons -->
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-commons</artifactId>
-                <version>1.13.6.RELEASE</version>
-            </dependency>
-
-            <!-- Spring Data Couchbase -->
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-couchbase</artifactId>
-                <version>2.2.6.RELEASE</version>
-            </dependency>
-
-            <!-- Spring Data Elasticsearch -->
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-elasticsearch</artifactId>
-                <version>2.1.6.RELEASE</version>
-            </dependency>
-
-            <!-- Spring Data Gemfire -->
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-gemfire</artifactId>
-                <version>1.9.6.RELEASE</version>
-            </dependency>
-
-            <!-- Spring Data JPA -->
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-jpa</artifactId>
-                <version>1.11.6.RELEASE</version>
-            </dependency>
-
-            <!-- Spring Data MongoDB -->
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-mongodb</artifactId>
-                <version>1.10.6.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-mongodb-cross-store</artifactId>
-                <version>1.10.6.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-mongodb-log4j</artifactId>
-                <version>1.10.6.RELEASE</version>
-            </dependency>
-
-            <!-- Spring Data Neo4j -->
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-neo4j</artifactId>
-                <version>4.2.6.RELEASE</version>
-            </dependency>
-
-          <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-redis</artifactId>
-                <version>2.0.0.RELEASE</version>
-            </dependency> 
-
-            <!-- Spring Data REST -->
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-rest-webmvc</artifactId>
-                <version>2.6.6.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-rest-core</artifactId>
-                <version>2.6.6.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-rest-hal-browser</artifactId>
-                <version>2.6.6.RELEASE</version>
-            </dependency>
-
-            <!-- Spring Data Solr -->
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-solr</artifactId>
-                <version>2.1.6.RELEASE</version>
-            </dependency>
-
-            <!-- Spring Data KeyValue -->
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-keyvalue</artifactId>
-                <version>1.2.6.RELEASE</version>
-            </dependency>
-
-            <!-- Spring Data Envers -->
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-envers</artifactId>
-                <version>1.1.6.RELEASE</version>
-            </dependency>
-
-            <!-- Spring Data LDAP -->
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-ldap</artifactId>
-                <version>1.0.6.RELEASE</version>
-            </dependency>
-              
-              
-        </dependencies>
-    </dependencyManagement> 
+     <dependencyManagement>
+		<dependencies>
+			<dependency>
+			    <groupId>org.quartz-scheduler</groupId>
+			    <artifactId>quartz</artifactId>
+			    <version>${quartz.version}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>commons-lang</groupId>
+				<artifactId>commons-lang</artifactId>
+				<version>${commons.lang.version}</version>
+				<scope>compile</scope>
+			</dependency>
+			
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>${commons.io.version}</version>
+				<scope>compile</scope>
+			</dependency>
+			
+			<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>javax.servlet-api</artifactId>
+				<version>3.1.0</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency> 
+				<groupId>javax.servlet.jsp</groupId>
+				<artifactId>jsp-api</artifactId>
+				<version>2.1</version>
+				<scope>provided</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
   
     
     <build>
